fixed image link borders on ie

--- a/assets/stylesheets/customizations.css
+++ b/assets/stylesheets/customizations.css
@@ -23,3 +23,7 @@ img {
   -ms-interpolation-mode: bicubic;
 }
 
+a img {
+  border: none;
+}
+
